Added debug stream to visualize network consumption. Enabled compression on each protocol. Prevent sending frames without modifications. Minor updates to rendering.

--- a/Hansha/Hansha.csproj
+++ b/Hansha/Hansha.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Handlers\ProtocolHandler.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Handlers\StaticHandler.cs" />
+    <Compile Include="Extensions\ByteArrayExtension.cs" />
+    <Compile Include="Streams\DebugStream.cs" />
     <Compile Include="Streams\WebSocketProtocolStream.cs" />
   </ItemGroup>
   <ItemGroup>
