--- a/Hansha/Hansha.csproj
+++ b/Hansha/Hansha.csproj
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,7 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpEventLoop, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -57,7 +57,7 @@
     <Compile Include="Server.cs" />
     <Compile Include="Handlers\StaticHandler.cs" />
     <Compile Include="Streams\DebugStream.cs" />
-    <Compile Include="Streams\WebSocketProtocolStream.cs" />
+    <Compile Include="Streams\WebSocketStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
