Implemented additional screen capture core, using BitBlt. This naive little method works great when there is no DWM synchronization, but since Windows 8+ you can't disable it. But, this proves a point. Pixel leaking occurs somewhere in the DesktopDuplication screen core.

--- a/Hansha/Hansha.csproj
+++ b/Hansha/Hansha.csproj
@@ -86,6 +86,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Hansha.Core.BitBlt\Hansha.Core.BitBlt.csproj">
+      <Project>{509e3bd8-4864-4b5c-b559-8d45430794b4}</Project>
+      <Name>Hansha.Core.BitBlt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hansha.Core.DesktopDuplication\Hansha.Core.DesktopDuplication.csproj">
       <Project>{6892275f-202a-4638-b8e4-8b6ce1ea2d64}</Project>
       <Name>Hansha.Core.DesktopDuplication</Name>
