--- a/Hansha.Core.BitBlt/Hansha.Core.BitBlt.csproj
+++ b/Hansha.Core.BitBlt/Hansha.Core.BitBlt.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitBltScreen.cs" />
