--- a/Hansha.Core.DesktopDuplication/Hansha.Core.DesktopDuplication.csproj
+++ b/Hansha.Core.DesktopDuplication/Hansha.Core.DesktopDuplication.csproj
@@ -43,6 +43,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
