Switch to BitBlt when not Windows 8+

--- a/Hansha/Hansha.csproj
+++ b/Hansha/Hansha.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\BinaryReaderExtension.cs" />
     <Compile Include="Extensions\BinaryWriterExtension.cs" />
     <Compile Include="Extensions\ByteArrayExtension.cs" />
     <Compile Include="Protocols\SimpleProtocol.cs" />
