--- a/Hansha/Hansha.csproj
+++ b/Hansha/Hansha.csproj
@@ -34,6 +34,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="lz4.AnyCPU.loader, Version=1.0.4.0, Culture=neutral, PublicKeyToken=7aa3c636ef56b77f, processorArchitecture=MSIL">
+      <HintPath>..\packages\IonKiwi.lz4.net.1.0.5\lib\net45\lz4.AnyCPU.loader.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SharpEventLoop, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpEventLoop.1.1.0\lib\SharpEventLoop.dll</HintPath>
       <Private>True</Private>
@@ -57,6 +61,8 @@
     <Compile Include="Handlers\StaticHandler.cs" />
     <Compile Include="Streams\DebugStream.cs" />
     <Compile Include="Streams\WebSocketStream.cs" />
+    <Compile Include="Utilities\QuickBinaryReader.cs" />
+    <Compile Include="Utilities\QuickBinaryWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
@@ -81,6 +87,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\rawInflate.min.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lz4.x64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lz4.x86.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
