--- a/Hansha/packages.config
+++ b/Hansha/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IonKiwi.lz4.net" version="1.0.5" targetFramework="net45" />
   <package id="SharpEventLoop" version="1.1.0" targetFramework="net45" />
 </packages>
